--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,63 @@
-.App {
+p {
+  font-size: 14px;
+  color: #262626;
+}
+.section {
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+.main-heading {
+  color: rgb(204, 18, 18);
+  font-size: 26px;
+}
+.underline {
+  height: 04px;
+  width: 4rem;
+  background-color: #f76c2f;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.bg-c-light {
+  background-color: #f2f2f2;
+}
+footer {
+  position: relative;
+}
+/*Nav bar links margine*/
+li {
+  margin-left: 10px;
+}
+
+#contactadd {
+  margin-top: 170px;
+}
+
+.scroll-to-top {
+  position: fixed;
+  bottom: 20px;
+  right: 5%;
+  width: 40px;
+  height: 40px;
+  border-radius: 10px;
+  background-color: #fff;
+  color: red;
+  z-index: 1;
+  cursor: pointer;
+  font-size: xx-large;
   text-align: center;
+  padding-bottom: 10px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.scroll-to-top {
+  /* margin-left: 3000px !important; */
+  animation: scrollTop 0.5s alternate ease infinite;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
+@keyframes scrollTop {
   from {
-    transform: rotate(0deg);
+    transform: translateY(2px);
   }
   to {
-    transform: rotate(360deg);
+    transform: translateY(-2px);
   }
 }
