--- a/src/components/pages/Home.css
+++ b/src/components/pages/Home.css
@@ -24,5 +24,5 @@ h6 {
   font-weight: 800;
 }
 p {
-  font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
